# libremarkable

./: .gitignore  .gitmodules  Cargo.toml  KnowledgeBase.md  LICENSE.md  Makefile  README.md  bootlog.txt  evtest.c  gen_cargo_config.py  poc.c  poc.cc  shell.nix  spy.c
.github/workflows/: build.yml  demo.yml
FramebufferSpy/: Makefile  remarkableFramebufferSpy.c
PartialUpdatePoC/: Makefile  poc  poc.c
c-impl/libremarkable/: refresh.c
c-implementation/libremarkable/: Makefile  bitmap.c  fb.c  serde.c  shapes.h
docker-toolchain/: Dockerfile
examples/: basic_draw.rs  demo.rs  input.rs  live.rs  rgb565_to_srgb.rs  screenshot.rs  spy.rs  swtfb_sysv_spy.rs
kernel-mxc-epdc-fb-reference/: mxc_epdc_fb.c  mxcfb.h  zero-gravitas.dts
legacy-c-impl/: Makefile  poc.cc
legacy-c-impl/libremarkable/: Makefile
libremarkable/: Makefile  bitmap.h  chars.h  fb.c  freetype.c  lib.h  refresh.c  serde.c
librustpad/: Cargo.toml
librustpad/src/: ev.rs  ev_debug.rs  fb.rs  fbdraw.rs  fbio.rs  lib.rs  multitouch.rs  mxc_types.rs  physical_buttons.rs  refresh.rs
reference-material/: epdc_ES103CS1.fw  mxc_epdc_fb.c  mxc_epdc_fb_test  mxc_epdc_fb_test.c  opkg-0.3.6-remarkable.tgz
rust-implementation/: README.md
rust-implementation/librustpad/: Cargo.toml
rust-implementation/librustpad/src/: ev.rs  fb.rs  fbdraw.rs  lib.rs  multitouch.rs  mxc_types.rs  physical_buttons.rs  refresh.rs  uix.rs  uix_lua.rs  unifiedinput.rs  wacom.rs
rust-implementation/rust-poc/: Cargo.toml  README.md
rust-implementation/rust-poc/src/: main.rs
rust-implementation/rust-spy/: Cargo.toml
rust-implementation/rust-spy/src/: lib.rs
rust-poc/: Cargo.toml
rust-poc/src/: button_demo.rs  main.rs  multitouch.rs  physical_buttons.rs
rust-spy/: Cargo.toml
rustspy/: Cargo.toml  Makefile
rustspy/src/: lib.rs
src/: appctx.rs  battery.rs  device.rs  dimensions.rs  ev.rs  fb.rs  fbdraw.rs  fbio.rs  lib.rs  mxc_types.rs  refresh.rs  uix.rs  uix_lua.rs  unifiedinput.rs
src/device/: mod.rs
src/framebuffer/: common.rs  core.rs  draw.rs  graphics.rs  io.rs  mod.rs  mxcfb.rs  refresh.rs  screeninfo.rs  storage.rs  swtfb_client.rs  swtfb_ipc.rs
src/input/: ecodes.rs  ev.rs  gpio.rs  mod.rs  multitouch.rs  rotate.rs  scan.rs  wacom.rs
src/ui_extensions/: element.rs  luaext.rs  mod.rs
tests/: test_fb.rs
xochitl-reference/: libqsgepaper.md  remarkable-shutdown
