[package]
name = "libremarkable"
version = "0.5.0"
authors = ["Can Selcik <contact@cselcik.com>"]
repository = "https://github.com/canselcik/libremarkable"
license = "MIT"
description = "The only publicly available Framework for developing applications for the Remarkable Paper Tablet w/ Low Latency Partial Refresh Support"
readme = "README.md"
exclude = [ "reference-material/*", "legacy-c-impl/*", "private/*" ]
edition = "2021"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
once_cell = "1.9.0"
atomic = "0.5.1"
cgmath = "0.18.0"
libc = "0.2.69"


# framebuffer
memmap2 = { version = "0.5.2", optional = true }
ioctl-gen = { version = "0.1.1", optional = true }
zstd = { version = "0.9.0", optional = true }

# framebuffer-drawing
rusttype = { version = "0.9.2", optional = true }
image = { version = "0.23.14", optional = true }
line_drawing = { version = "1.0.0", optional = true }

# input
evdev = { version = "0.11.3", optional = true }
epoll = { version = "4.3.1", optional = true }
fxhash = { version = "0.2.1", optional = true }

# appctx
aabb-quadtree = { version = "0.1.0", optional = true }

# hlua
hlua = { version = "0.4.1", optional = true }

# runtime benchmarking
stopwatch = { version = "0.0.7", optional = true }

[features]
default = ["framebuffer", "framebuffer-storage", "framebuffer-drawing", "framebuffer-text-drawing", "input", "battery", "appctx", "hlua"]

framebuffer = ["memmap2", "ioctl-gen"]
framebuffer-storage = ["framebuffer", "image", "zstd"]
framebuffer-drawing = ["framebuffer", "image", "line_drawing"]
framebuffer-text-drawing = ["framebuffer-drawing", "rusttype"]
input = ["evdev", "epoll", "fxhash"]
battery = []
appctx = ["framebuffer-text-drawing", "input", "aabb-quadtree"]

enable-runtime-benchmarking = ["stopwatch"]

[profile.release]
debug = true

[[example]]
name = "spy"
path = "examples/spy.rs"
crate-type = ["dylib"]

[[example]]
name = "swtfb_sysv_spy"
path = "examples/swtfb_sysv_spy.rs"
crate-type = ["dylib"]

[[example]]
name = "demo"
path = "examples/demo.rs"
crate-type = ["bin"]

[[example]]
name = "live"
path = "examples/live.rs"
crate-type = ["bin"]

[dev-dependencies]
# For spy
redhook = "2.0.0"
libc = "0.2.69"
# For demo
chrono = "0.4.19"
# For live
tiny_http = "0.9.0"
