[package]
name = "libremarkable"
version = "0.7.0"
authors = ["Can Selcik <contact@cselcik.com>"]
repository = "https://github.com/canselcik/libremarkable"
license = "MIT"
description = "The only publicly available Framework for developing applications for the Remarkable Paper Tablet w/ Low Latency Partial Refresh Support"
readme = "README.md"
exclude = [ "reference-material/*", "legacy-c-impl/*", "private/*" ]
edition = "2021"

[dependencies]
log = "0.4.22"
cgmath = "0.18.0"
libc = "0.2.69"

# framebuffer
memmap2 = { version = "0.9.4", optional = true }
ioctl-gen = { version = "0.1.1", optional = true }
zstd = { version = "0.13.2", optional = true }

# framebuffer-drawing
rusttype = { version = "0.9.3", optional = true }
image = { version = "0.25.2", optional = true, default-features = false, features = [ "bmp", "gif", "jpeg", "png", "tga", "webp" ] } # No need for rayon or more nieche image formats here
line_drawing = { version = "1.0.0", optional = true }

# input
evdev = { version = "0.12.2", optional = true }
epoll = { version = "4.3.3", optional = true }
fxhash = { version = "0.2.1", optional = true }

# appctx
aabb-quadtree = { version = "0.1.0", optional = true }

# hlua
hlua = { version = "0.4.3", optional = true }

# runtime benchmarking
stopwatch = { version = "0.0.7", optional = true }
#stopwatch = { git = "https://github.com/jwpjrdev/rust-stopwatch.git", rev = "dd9adfef", optional = true } # https://github.com/ellisonch/rust-stopwatch/pull/18

[features]
default = ["scan", "framebuffer-types", "framebuffer", "framebuffer-storage", "framebuffer-drawing", "image", "framebuffer-text-drawing", "input-types", "input", "battery", "appctx", "hlua"]

scan = ["evdev"]
framebuffer-types = ["ioctl-gen"]
framebuffer = ["scan", "framebuffer-types", "memmap2"]
framebuffer-storage = ["framebuffer", "zstd"]
framebuffer-drawing = ["framebuffer", "line_drawing"]
framebuffer-text-drawing = ["framebuffer-drawing", "rusttype"]
input-types = []
input = ["scan", "input-types", "evdev", "epoll", "fxhash"]
battery = []
appctx = ["framebuffer-text-drawing", "input", "aabb-quadtree"]

enable-runtime-benchmarking = ["stopwatch"]

[profile.release]
debug = true

[[example]]
name = "spy"
path = "examples/spy.rs"
crate-type = ["dylib"]

[[example]]
name = "swtfb_sysv_spy"
path = "examples/swtfb_sysv_spy.rs"
crate-type = ["dylib"]

[[example]]
name = "demo"
path = "examples/demo.rs"
crate-type = ["bin"]

[[example]]
name = "live"
path = "examples/live.rs"
crate-type = ["bin"]

[dev-dependencies]
env_logger = "0.11.5"
# For spy
redhook = "2.0.0"
# For demo
chrono = "0.4.38"
# For live
tiny_http = "0.12.0"
# For screenshot
rgb565 = "0.1.3"
